WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239642
Service workers should not intercept embed/object related loads
https://bugs.webkit.org/show_bug.cgi?id=239642
Summary
Service workers should not intercept embed/object related loads
youenn fablet
Reported
2022-04-22 01:34:49 PDT
Service workers should not intercept embed/object related loads
Attachments
Patch
(10.27 KB, patch)
2022-04-22 01:37 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(10.18 KB, patch)
2022-04-22 04:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(10.24 KB, patch)
2022-04-22 07:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-04-22 01:37:25 PDT
Created
attachment 458122
[details]
Patch
youenn fablet
Comment 2
2022-04-22 04:52:50 PDT
Created
attachment 458137
[details]
Patch
youenn fablet
Comment 3
2022-04-22 07:11:43 PDT
Created
attachment 458143
[details]
Patch
Chris Dumez
Comment 4
2022-04-25 12:30:32 PDT
Comment on
attachment 458143
[details]
Patch r=me
EWS
Comment 5
2022-04-25 23:58:43 PDT
Committed
r293417
(
249977@main
): <
https://commits.webkit.org/249977@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458143
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-25 23:59:14 PDT
<
rdar://problem/92317624
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug