Service workers should not intercept embed/object related loads https://bugs.webkit.org/show_bug.cgi?id=239642

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/embed-and-object-are-not-intercepted.https-expected.txt:

Source/WebCore:

In case document loader or image loader are triggered by embed/object elements,
set service worker mode to none.

Covered by rebased test.

* loader/DocumentLoader.cpp:
* loader/DocumentLoader.h:
* loader/ImageLoader.cpp:

Canonical link: https://commits.webkit.org/249977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293417 268f45cc-cd09-0410-ab3c-d52691b4dbfc